// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds-skeleton() should return correct css for opts: { borderRadius: '6px' } 1`] = `
"div {
  border-radius: 6px;
  display: block;
  background: #eeeff2 linear-gradient(to right, transparent 0%, #f7f7f7 20%, transparent 50%) 0 0/200% 100%;
  animation: skeletonAnimation var(--transition-duration-long, 0.6s) var(--easing-base, cubic-bezier(0.25, 0.1, 0.25, 1)) infinite;
}
@keyframes skeletonAnimation {
  from {
    background-position: 100% 0;
  }
  to {
    background-position: -100% 0;
  }
}"
`;

exports[`pds-skeleton() should return correct css for opts: { borderRadius: 'medium' } 1`] = `
"div {
  border-radius: 8px;
  display: block;
  background: #eeeff2 linear-gradient(to right, transparent 0%, #f7f7f7 20%, transparent 50%) 0 0/200% 100%;
  animation: skeletonAnimation var(--transition-duration-long, 0.6s) var(--easing-base, cubic-bezier(0.25, 0.1, 0.25, 1)) infinite;
}
@keyframes skeletonAnimation {
  from {
    background-position: 100% 0;
  }
  to {
    background-position: -100% 0;
  }
}"
`;

exports[`pds-skeleton() should return correct css for opts: { borderRadius: 'small' } 1`] = `
"div {
  border-radius: 4px;
  display: block;
  background: #eeeff2 linear-gradient(to right, transparent 0%, #f7f7f7 20%, transparent 50%) 0 0/200% 100%;
  animation: skeletonAnimation var(--transition-duration-long, 0.6s) var(--easing-base, cubic-bezier(0.25, 0.1, 0.25, 1)) infinite;
}
@keyframes skeletonAnimation {
  from {
    background-position: 100% 0;
  }
  to {
    background-position: -100% 0;
  }
}"
`;

exports[`pds-skeleton() should return correct css for opts: {} 1`] = `
"div {
  border-radius: 4px;
  display: block;
  background: #eeeff2 linear-gradient(to right, transparent 0%, #f7f7f7 20%, transparent 50%) 0 0/200% 100%;
  animation: skeletonAnimation var(--transition-duration-long, 0.6s) var(--easing-base, cubic-bezier(0.25, 0.1, 0.25, 1)) infinite;
}
@keyframes skeletonAnimation {
  from {
    background-position: 100% 0;
  }
  to {
    background-position: -100% 0;
  }
}"
`;
